--- a/src/pages/2020-05-01-covid-destroyer/index.fr.mdx
+++ b/src/pages/2020-05-01-covid-destroyer/index.fr.mdx
@@ -5,21 +5,19 @@ category: portfolio
 language: fr
 title: Covid Destroyer
 subtitle: Projet de confinement
-description: description
+description: Quirky videoprojected game built during lockdown to play with confined neighbors.
 date: '2020-05-01'
 image: cover.jpg
+priority: 4
 embeddedImagesLocal:
-    - cover.jpg
-    - c.jpg
-    - a.jpg
-    - b.jpg
+  - cover.jpg
+  - c.jpg
+  - a.jpg
+  - b.jpg
 ---
 
-
 ![Cover](cover.jpg)
+
 <ImageGrid props={props} indices={[1, 2, 3]} />
 
-
-**Covid Destroyer** est un jeu multijoueur décalé conçu pendant le confinement pour jouer avec les voisins. Avec leurs smartphones, chaque joueur contrôle une **seringue-sulfateuse** dans un plasma plein de virus. Le moteur de jeu a conscience de l'architecture et créée des interactions amusantes avec les fenêtres de la façade.
-
-
+Jeu multijoueur décalé conçu pendant le confinement pour jouer avec les voisins. Avec son smartphone, chaque joueur contrôle une **seringue-sulfateuse** dans un plasma rempli de virus. Le moteur de jeu a conscience de l'architecture et créée des interactions amusantes avec les fenêtres de la façade.
