--- a/src/pages/2020-05-01-covid-destroyer/index.mdx
+++ b/src/pages/2020-05-01-covid-destroyer/index.mdx
@@ -5,22 +5,19 @@ category: portfolio
 language: en
 title: Covid Destroyer
 subtitle: Lockdown project
-description: description
+description: Quirky videoprojected game built during lockdown to play with confined neighbors.
 date: '2020-05-01'
 image: cover.jpg
+priority: 4
 embeddedImagesLocal:
-    - cover.jpg
-    - c.jpg
-    - a.jpg
-    - b.jpg
+  - cover.jpg
+  - c.jpg
+  - a.jpg
+  - b.jpg
 ---
 
-
 ![Cover](cover.jpg)
+
 <ImageGrid props={props} indices={[1, 2, 3]} />
 
-
-
-**Covid Destroyer** is a quirky videoprojected game I've built during lockdown to play with my neighbors. From their smartphones each player controls a **needle-machine-gun** inside a plasma full of viruses. The game engine is conscious of the architecture to create fun interactions with facade windows.
-
-
+Quirky videoprojected game built during lockdown to play with confined neighbors. From their smartphones each player controls a **needle-machine-gun** inside a plasma full of viruses. The game engine is conscious of the architecture to create fun interactions with facade windows.
