--- a/src/pages/2020-05-01-covid-destroyer/index.fr.mdx
+++ b/src/pages/2020-05-01-covid-destroyer/index.fr.mdx
@@ -18,6 +18,6 @@ embeddedImagesLocal:
 
 ![Cover](cover.jpg)
 
-<ImageGrid props={props} indices={[1, 2, 3]} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[1, 2, 3]} />
 
 Jeu multijoueur décalé conçu pendant le confinement pour jouer avec les voisins. Avec son smartphone, chaque joueur contrôle une **seringue-sulfateuse** dans un plasma rempli de virus. Le moteur de jeu a conscience de l'architecture et créée des interactions amusantes avec les fenêtres de la façade.
