--- a/src/pages/2020-05-01-covid-destroyer/index.mdx
+++ b/src/pages/2020-05-01-covid-destroyer/index.mdx
@@ -18,6 +18,6 @@ embeddedImagesLocal:
 
 ![Cover](cover.jpg)
 
-<ImageGrid props={props} indices={[1, 2, 3]} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[1, 2, 3]} />
 
 Quirky videoprojected game built during lockdown to play with confined neighbors. From their smartphones each player controls a **needle-machine-gun** inside a plasma full of viruses. The game engine is conscious of the architecture to create fun interactions with facade windows.
