--- a/src/pages/2020-05-01-covid-destroyer/index.fr.mdx
+++ b/src/pages/2020-05-01-covid-destroyer/index.fr.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: fr
 title: Covid Destroyer
 subtitle: Projet de confinement
+tags: other
 description: Quirky videoprojected game built during lockdown to play with confined neighbors.
 date: '2020-05-01'
 image: cover.jpg
