--- a/src/pages/2020-05-01-covid-destroyer/index.mdx
+++ b/src/pages/2020-05-01-covid-destroyer/index.mdx
@@ -5,6 +5,7 @@ category: portfolio
 language: en
 title: Covid Destroyer
 subtitle: Lockdown project
+tags: other
 description: Quirky videoprojected game built during lockdown to play with confined neighbors.
 date: '2020-05-01'
 image: cover.jpg
