New : spanish translation V1

--- a/src/pages/2020-05-01-covid-destroyer/index.fr.mdx
+++ b/src/pages/2020-05-01-covid-destroyer/index.fr.mdx
@@ -6,7 +6,7 @@ language: fr
 title: Covid Destroyer
 subtitle: Projet de confinement
 tags: other
-description: Quirky videoprojected game built during lockdown to play with confined neighbors.
+description: Jeu décalé videoprojected game conçu pendant le confinement pour joueravec les voisins confinés
 date: '2020-05-01'
 image: cover.jpg
 priority: 5.9
